fix not wrap bug

--- a/page/ProjectDetail/index.scss
+++ b/page/ProjectDetail/index.scss
@@ -4,6 +4,7 @@
       border-radius: 5px;
       background-color: #f8f8f8;
       margin-top: 10px;
+      white-space: pre;
     }
   }
 }
